2011-03-06  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-all-children): Simplify the
	selection method.

	* src/xlib-util.lisp (move-window,resize-window): Add a
	*color-move-window* border when moving or resizing a window.

2011-03-04  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-all-children): Perform only one
	recusion on the clfswm tree: calculate geometry and place child in
	one pass.

2011-03-03  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-all-children): Rethink of display
	child order to prevent very annoying flickering.

2011-02-27  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (query-yes-or-no): New function.

	* src/clfswm-configuration.lisp (reset-all-config-variables): New
	function and menu entry.
	(query-conf-value): Add the ability to leave the field blank to
	reset the variable to its default value.

2011-02-26  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-configuration.lisp
	(add-all-configuration-default-value): Add a default value to
	configurable variables.

2011-02-23  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main-unprotected): Create the configuration
	menu only once at startup.

2011-02-22  Desmond O. Chang <dochang@gmail.com>

	* contrib/amixer.lisp: Add a volume mode inspired by the emms
	volume package. Alsa mixer interface.

	* contrib/volume-mode.lisp: Add a volume mode inspired by the emms
	volume package.

2011-02-22 Desmond O. Chang <dochang@gmail.com>

	* src/clfswm.lisp (main): Use ASDF:SYSTEM-SOURCE-DIRECTORY instead
	of *LOAD-TRUENAME*. *LOAD-TRUENAME* is only bound during a call to
	LOAD. If one eval CLFSWM:MAIN in repl, BASE-DIR will be an empty
	string. Use ASDF:SYSTEM-SOURCE-DIRECTORY to fix it.

2011-02-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main-unprotected): Add a close hook. And close